# PandocTools

./: .gitignore  CLAUDE.md  README.md  build.bat  note.md  plan.tex  pyproject.toml
filter/: default_filter.lua
profiles/: compact.yml  default.yml  letter.yml  presentation.yml  sample_html.yml  typst.yml
sample/: note.md  plan.md
src/: cli.py  common.py  config.py  defaults.py  engines.py  main.py  pandoc_process.py  ui_main.py
src/filters/: default_filter.lua  typst_tag.lua
src/templates/: default_typst.typ  latex_header_base.tex
tests/: conftest.py  test_config.py  test_engines.py
