[project]
name = "pandoc-gui"
version = "0.1.0"
description = "Windows GUI application for Pandoc conversion"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "PyQt6>=6.6.0",
    "pypandoc>=1.12",
    "pyyaml>=6.0",
]

[project.scripts]
# CLI (Qt 非依存)。uv tool install / pip install で `pandoctools` として PATH に出る
pandoctools = "cli:main"
# GUI エントリ
pandoc-gui = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# src/ 直下のフラットなモジュール (cli, common, engines, config ...) を
# top-level モジュールとして配置する (src/ プレフィックスを除去)。
# これにより `from common import ...` 等の既存 import と `python src/main.py` 実行を維持したまま
# editable install でき、エントリポイント cli:main / main:main が解決する。
only-include = ["src"]
sources = ["src"]

[tool.uv]
dev-dependencies = [
    "pyinstaller>=6.0.0",
    "pytest>=7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
